cmake_minimum_required(VERSION 3.17)
project(workshop_c__)

set(CMAKE_CXX_STANDARD 14)

add_executable(workshop_c__ src/main.cpp)
add_executable(workshop_c__string src/string.cpp)
add_executable(workshop_c__loop src/loop.cpp)
add_executable(workshop_c__vector src/vector/vector.cpp)
add_executable(workshop_c__vector_value_reference src/vector/vector_value_reference.cpp)
add_executable(workshop_c__vector_function src/vector/vector_function.cpp)
add_executable(workshop_c__vector_struct src/vector/vector_struct.cpp)
add_executable(workshop_c__separate_compilation src/separate-compilation/main.cpp)
add_executable(workshop_c__bugs_return_local_pointer src/bugs/return_local_pointer.c)
add_executable(workshop_c__base_pointer_vs_reference src/base/pointer_vs_reference.cpp)
add_executable(workshop_c__pointer_to_const_vs_const_pointer src/base/pointer/pointer_to_const_vs_const_pointer.cpp)
add_executable(workshop_c__string_to_vector src/base/string_to_vector.cpp)
add_executable(workshop_c__print_string_frame src/base/print_string_frame.cpp)
add_executable(workshop_c__find_urls src/base/find_urls.cpp)
add_executable(workshop_c__param_is_function src/base/pointer/param_is_function.cpp)
add_executable(workshop_c__find_if src/base/pointer/find_if.cpp)
add_executable(workshop_c__file_read src/base/file/file-read.cpp)
add_executable(workshop_c__char_pointer_with_string src/base/char_pointer_with_string.cpp)
add_executable(workshop_c__capture_words_line_numbers src/base/capture_words_line_numbers.cpp)
add_executable(workshop_c__container_vector src/container/vector.cpp)
add_executable(workshop_c__container_list src/container/list.cpp)
add_executable(workshop_c__container_map src/container/map.cpp)
add_executable(workshop_c__misc_generate_sentences src/misc/generate_sentences.cpp)
